# alox-48

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
alox-48/: Cargo.toml
alox-48-derive/: Cargo.toml
alox-48-derive/src/: de.rs  lib.rs  ser.rs  util.rs
alox-48/examples/: Actors.rxdata  System.rxdata  bad_data.rs  basic.rs  error_tracking.rs  example.rs  extra_fields.rs  object_link.rs  optionals.rs  rmxp_structs.rs  rxdata.rs  serialize.rs  testing.rs  userclass.rs  userdata.rs
alox-48/src/: lib.rs  tag.rs
alox-48/src/de/: deserializer.rs  error.rs  ignored.rs  impls.rs  mod.rs  traits.rs
alox-48/src/de/extension/: impls.rs
alox-48/src/path_to_error/: de.rs  mod.rs  ser.rs
alox-48/src/rb_types/: instance.rs  mod.rs  object.rs  rb_string.rs  rb_struct.rs  sym.rs  symbol.rs  userdata.rs
alox-48/src/ser/: error.rs  impls.rs  mod.rs  serializer.rs  traits.rs
alox-48/src/value/: de.rs  from.rs  impls.rs  mod.rs  ser.rs
alox-48/src/value/types/: object.rs
examples/: Actors.rxdata  Map001.rxdata  Map223.rxdata  bad_data.rs  encoding.rs  example.rs  rmxp_structs.rs  rxdata.rs  test_gen.rb  value.rs
src/: de.rs  error.rs  lib.rs  ser.rs  tag.rs
src/de/: deserializer.rs  error.rs  extension.rs  mod.rs
src/de/extension/: impls.rs  mod.rs
src/ser/: error.rs  mod.rs  serializer.rs
src/ser/extension/: mod.rs
src/value/: de.rs  from.rs  impls.rs  mod.rs  ser.rs
src/value/types/: object.rs  rb_string.rs  symbol.rs  userdata.rs
