[package]
name = "alox-48"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
nom = "7"
num-traits = "0.2"
enum-as-inner = "0.5.1"
indexmap = { version = "1.9.2", features = ["serde"] }
ordered-float = "3.4.0"

[dev-dependencies]
pretty-hex = "0.3.0"
color-eyre = "0.6.2"
bytemuck = "1.12.3"
