[package]
name = "alox-48"
version = "0.2.0"
edition = "2021"
authors = ["Lily Madeline Lyons"]
repository = "https://github.com/Speak2Erase/alox-48"
license = "GPL-3.0"
description = "ruby marshal data deserializer"
keywords = ["ruby", "serde", "deserialization", "marshal", "ruby-marshal"]
categories = ["parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
enum-as-inner = "0.5"
indexmap = { version = "1.9", features = ["serde"] }
thiserror = "1.0"
paste = "1.0"

[features]
warn-encoding = []

[dev-dependencies]
pretty-hex = "0.3.0"
color-eyre = "0.6.2"
bytemuck = "1.12.3"
