[package]
name = "alox-48-derive"
version = "0.1.0"
edition = "2021"
authors = ["Melody Madeline Lyons"]
repository = "https://github.com/Speak2Erase/alox-48"
license = "MPL-2.0"
description = "ruby marshal data deserializer"
keywords = ["ruby", "serde", "deserialization", "marshal", "ruby-marshal"]
categories = ["parser-implementations"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "2.0"
quote = "1.0"

darling = "0.20"

proc-macro2 = "1.0"
proc-macro-error = "1.0"

itertools = "0.13.0"
