[package]
name = "alox-48"
version = "0.5.0"
edition = "2021"
authors = ["Melody Madeline Lyons"]
repository = "https://github.com/Speak2Erase/alox-48"
license = "MPL-2.0"
description = "ruby marshal data deserializer"
keywords = ["ruby", "data-format", "marshal", "ruby-marshal"]
categories = ["parser-implementations"]
readme = "../README.md"

[dependencies]
enum-as-inner = "0.6"
indexmap = { version = "2.0", features = ["serde", "std"] }
thiserror = "1.0"
paste = "1.0"

alox-48-derive = { version = "0.3.0", path = "../alox-48-derive/", optional = true }

[features]
derive = ["alox-48-derive"]
default = ["derive"]

[dev-dependencies]
pretty-hex = "0.4.0"
color-eyre = "0.6.2"
bytemuck = "1.12.3"
